--- a/todo.css
+++ b/todo.css
@@ -1,24 +1,70 @@
 
-@media screen and (min-width: 300px) and (max-width: 640px){
+/* @media screen and (min-width: 300px) and (max-width: 640px) { */
+@media screen and (min-width: 300px) and (max-width: 800px) {
 /* actualización del sistema 2.0 [23/6/2021] / [26/6/2021]*/
 
+
 /* Archivo html-5 */
-body {/* background: #17224D; */ background: #ffB;}
+body {/* background: #17224D; */ background: #ffB;
+background: url('background.jpg')round;
+
+}
 html {scroll-behavior: smooth;}
 /* Archivo html-5 */
 /* #45A  color */
+/* background: #002d3c; */
 
-.PRIMERA_CAPAS {}
-.SEGUNDA_CAPAS {margin: 10px; background: #002d3c; overflow: hidden;
-							border-radius: 20px;}
+.PRIMERA_CAPAS {padding: 30px 0px 25px 0px;}
+.SEGUNDA_CAPAS_U {margin: 10px; overflow: hidden;border-radius: 20px;
+background: url('Flipaclip_Back.jpg')round;overflow: hidden;
+padding: 40px 0px 40px 0px;}
+
+.SEGUNDA_CAPAS_D {margin: 10px; overflow: hidden;border-radius: 20px;
+background: url('Creative_Back.jpg')round; overflow: hidden;
+padding: 40px 0px 40px 0px;}
+
+.SEGUNDA_CAPAS_T {margin: 10px; overflow: hidden;border-radius: 20px;
+background: url('Fondo_OC.png')round; overflow: hidden;
+padding: 40px 0px 40px 0px;}
+
+
 /* Archivo html-5 */
 
 /* --------- CABECERA ------------ */
 header {background:#002d3c;text-align: left;color: #fff;display: none;}
-#Fll::selection {background: transparent;}
-#Fll {color: #8080E0;background: yellow;display: flex; font-size: 200%;
-		 justify-content: center; margin: 0px;overflow: hidden;
-		 white-space: normal;}
+
+
+
+#Text_Secun_U {background: transparent; color: #000;}
+#Text_Secun_U::selection {background: transparent; color: #fff;}
+#Text_Princ_U::selection {background: transparent; color: #000;}
+#Text_Princ_U {display: flex; font-size: 2em;color: #D0D0D0;
+				justify-content: center; margin: 0px;overflow: hidden;
+				white-space: normal;}
+				
+				
+				
+				
+#Text_Secun_D {background: transparent; color: #905060;}
+#Text_Secun_D::selection {background: transparent; color: red;}
+#Text_Princ_D::selection {background: transparent; color: #000;}
+#Text_Princ_D {display: flex; font-size: 2em;color: #8080E0;
+				justify-content: center; margin: 0px;overflow: hidden;
+				white-space: normal;}
+				
+				
+#Text_Secun_T {background: transparent;color: #fff;}
+#Text_Secun_T::selection {background: transparent;color: #000;}
+#Text_Princ_T::selection {background: transparent; color: #000;}
+#Text_Princ_T {display: flex; font-size: 2em;color: #CCCCCC;
+				justify-content: center; margin: 0px;overflow: hidden;
+				white-space: normal;}
+				
+				
+				
+
+
+
 
 
 
@@ -28,67 +74,34 @@ header {background:#002d3c;text-align: left;color: #fff;display: none;}
 /* --------- CABECERA ------------ */
 
 
-/* --------💖💖💖💖 CAPA CENTRAL 💖💖💖💖---------- 
-.CAPA_CENTRAL { background: #f0f; padding: 10px; color: #000;
-overflow:scroll;white-space:normal;scroll-behavior:smooth;}
-.CAPA_CENTRAL::selection {background: transparent;}
-
-.Selección {display: grid;}
-.Clip {display: flex;}
-
-
-.límite_U {border: solid 2px #fff;margin: 5px;
-background: transparent;cursor: pointer;}
-.límite_U:hover {border: solid 2px #fff;margin: 5px;background: ;}
-#Clip:checked + .Clip {background: green;}
-.texto { padding: 12px 0px 0px 30px;}
- --------💖💖💖💖 CAPA CENTRAL 💖💖💖💖---------- */
-
-
-
-
-
-input {display: none;}
 
 /* 💗💗💗💗💗💗💗 IMÁGENES 💗💗💗💗💗💗💗💗 */
-.imag {width: 35%; padding: 4px; background: red;}
+.imag_U::selection {background: transparent;}
+.imag_U {width: 35%; padding: 4px; border-radius: 50px;}
+.imag::selection {background: transparent;}
+.imag {width: 35%; padding: 4px;}
+.IMAG_A::selection {background: transparent;}
 .IMAG_A {display: flex; justify-content: center; align-content: center;
-				background: green;padding: 20px 0px 0px 0px;}
+				padding: 20px 0px 0px 0px;}
+
 /* 💗💗💗💗💗💗💗 IMÁGENES 💗💗💗💗💗💗💗💗 */
-
-
-
-#Sl {color: #000;}/* SUBTÍTULO */
-
-
-
-
-
-
-
-#Sll{color: #905060;}/* SUBTÍTULO */
-#Flll {color: #CCCCCC;} /* TÍTULO flipa */
-#Slll {color: #fff;}/* SUBTÍTULO */
-
 
 
 .Text_Central {text-align:center;justify-content:center;
-			   display:flex;background:red; padding: 10px;overflow: hidden;
+			   display:flex; padding: 10px;overflow: hidden;
 			   white-space: normal;woverflow: hidden;white-space: normal;}
 
 
-.Text_Central_U {/* padding: 10px 0px 30px 0px;  */
-text-align:center;justify-content:center;display:flex;background:red;}
+.Text_Central_U {padding: 0px 0px 20px 0px;
+text-align:center;justify-content:center;display:flex;}
 
 
 
-.Text_A {width: 100%;overflow: hidden;white-space: normal;}
+.Text_A {width: 80%;overflow: hidden;white-space: normal;}
 
 
 #Fl {color: #D0D0D0;} /* TÍTULO flipa */
 #Fl::selection {color: #fff;}
-
-
 
 
 /* ------------- Todos los botones --------------- */
@@ -98,22 +111,171 @@ text-align:center;justify-content:center;display:flex;background:red;}
 .BOTON_A:hover {box-shadow: 0 0 20px #fff;border-radius: 10px;
 background-position: right center;color: #fff;text-decoration: none;}
 .BOTON_A::selection {background: transparent;}
-
+.Btn_U::selection {background: transparent;}
 .Btn_U {text-decoration: none;
-			margin: 10px;padding: 2px 8px 2px 8px;
-			font-size: 110%;
-			
-			
-			
+			margin: 10px;padding: 2px 8px 2px 8px;font-size: 110%;
+			border-bottom-color: #fff;border-left-color: #fff;
+			border-right-color: #fff;border-top-color: #fff;
+			box-sizing: border-box;overflow: hidden;
+			white-space: normal;border-radius: 5px;}
+/* ------------- Todos los botones --------------- */
+
+/* -------------- TEXTO DE LAS CARTAS ------------- */
+.Unn {background: #ffffff;color: black;
+	border-bottom-color: #ffffff;border-left-color: #ffffff;
+	border-right-color: #ffffff;border-top-color: #ffffff;
+	
+	box-sizing: border-box;overflow: hidden;white-space: normal;
+	border-radius: 5px;}/*Flipaclip_En_Español*/
+/* ----------------CARTAS--------------- */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1500px) and (min-width: 801px){
+
+/* Archivo html-5 */
+body {background: #17224D; margin: 40px 0px;
+display: flex; justify-content: center; align-content: center;}
+html {scroll-behavior: smooth;}
+/* Archivo html-5 */
+/* #45A  color */
+/* background: #002d3c; */
+
+
+
+
+.PRIMERA_CAPAS {
+display: grid; width: 700px;overflow: hidden;white-space: normal;
+justify-content: center; align-content: center;}
+
+.SEGUNDA_CAPAS_U {overflow: hidden;border-radius: 20px;
+background: url('Flipaclip_Back.jpg')round;overflow: hidden;
+
+padding: 20px 10px;
+margin: 20px;
+
+}
+
+.SEGUNDA_CAPAS_D {overflow: hidden;border-radius: 20px;
+background: url('Creative_Back.jpg')round; overflow: hidden;
+
+padding: 20px 10px;
+margin: 20px;
+
+}
+
+.SEGUNDA_CAPAS_T {overflow: hidden;border-radius: 20px;
+background: url('Fondo_OC.png')round; overflow: hidden;
+
+padding: 20px 10px;
+margin: 20px;
+
+}
+
+
+/* Archivo html-5 */
+
+/* --------- CABECERA ------------ */
+header {background:#002d3c;text-align: left;color: #fff;display: none;}
+
+
+
+#Text_Secun_U {background: transparent; color: #000;}
+#Text_Secun_U::selection {background: transparent; color: #fff;}
+#Text_Princ_U::selection {background: transparent; color: #000;}
+#Text_Princ_U {display: flex; font-size: 2em;color: #D0D0D0;
+				justify-content: center; margin: 0px;overflow: hidden;
+				white-space: normal;}
+				
+				
+				
+				
+#Text_Secun_D {background: transparent; color: #905060;}
+#Text_Secun_D::selection {background: transparent; color: red;}
+#Text_Princ_D::selection {background: transparent; color: #000;}
+#Text_Princ_D {display: flex; font-size: 2em;color: #8080E0;
+				justify-content: center; margin: 0px;overflow: hidden;
+				white-space: normal;}
+				
+				
+#Text_Secun_T {background: transparent;color: #fff;}
+#Text_Secun_T::selection {background: transparent;color: #000;}
+#Text_Princ_T::selection {background: transparent; color: #000;}
+#Text_Princ_T {display: flex; font-size: 2em;color: #CCCCCC;
+				justify-content: center; margin: 0px;overflow: hidden;
+				white-space: normal;}
+
+/* --------- CABECERA ------------ */
+
+
+input {display: none;}
+/* 💗💗💗💗💗💗💗 IMÁGENES 💗💗💗💗💗💗💗💗 */
+.imag_U::selection {background: transparent;}
+.imag_U {width: 40%; padding: 8px; border-radius: 50px;}
+.imag {width: 40%; padding: 8px;}
+.imag::selection {background: transparent;}
+.IMAG_A {display: flex; justify-content: center; align-content: center;
+				padding: 60px 0px 0px 0px;}
+
+/* 💗💗💗💗💗💗💗 IMÁGENES 💗💗💗💗💗💗💗💗 */
+
+
+.Text_Central {text-align:center;justify-content:center;
+			   display:flex; padding: 10px;overflow: hidden;
+			   white-space: normal;woverflow: hidden;white-space: normal;}
+
+
+.Text_Central_U {padding: 10px 0px 40px 0px;
+text-align:center;justify-content:center;display:flex;}
+
+
+
+.Text_A {width: 80%;overflow: hidden;white-space: normal;}
+
+
+#Fl {color: #D0D0D0;} /* TÍTULO flipa */
+#Fl::selection {color: #fff;}
+
+
+/* ------------- Todos los botones --------------- */
+.BOTON_A {text-decoration: none; color: #fff;cursor: pointer;
+				 border: solid 1px #fff; padding: 1px 4px 1px 4px;
+				 border-radius: 10px; margin: 5px;}
+.BOTON_A:hover {box-shadow: 0 0 20px #fff;border-radius: 10px;
+background-position: right center;color: #fff;text-decoration: none;}
+.BOTON_A::selection {background: transparent;}
+.Btn_U::selection {background: transparent;}
+.Btn_U {text-decoration: none;
+			margin: 10px;padding: 2px 8px 2px 8px;font-size: 160%;
 			border-bottom-color: #fff;border-left-color: #fff;
 			border-right-color: #fff;border-top-color: #fff;
 			box-sizing: border-box;overflow: hidden;
 			white-space: normal;border-radius: 5px;}
 			
-	
-	/*Flipaclip_En_Español*/
-			
-
 
 /* ------------- Todos los botones --------------- */
 
@@ -125,10 +287,5 @@ background-position: right center;color: #fff;text-decoration: none;}
 	box-sizing: border-box;overflow: hidden;white-space: normal;
 	border-radius: 5px;}/*Flipaclip_En_Español*/
 /* ----------------CARTAS--------------- */
-
-
-
-
-
 
 }
