--- a/todo.css
+++ b/todo.css
@@ -118,6 +118,19 @@ background-position: right center;color: #fff;text-decoration: none;}
 			border-right-color: #fff;border-top-color: #fff;
 			box-sizing: border-box;overflow: hidden;
 			white-space: normal;border-radius: 5px;}
+			
+.Btn_D::selection {background: transparent;}
+.Btn_D {text-decoration: none;
+			margin: 10px;padding: 2px 8px 2px 8px;font-size: 110%;
+			border-bottom-color: #90C0B0;border-left-color: #90C0B0;
+			border-right-color: #90C0B0;border-top-color: #90C0B0;
+			box-sizing: border-box;overflow: hidden;
+			background: #90C0B0;color: #905060;
+			white-space: normal;border-radius: 5px;}
+			
+.Btn_D:hover {color: red;}
+			
+
 /* ------------- Todos los botones --------------- */
 
 /* -------------- TEXTO DE LAS CARTAS ------------- */
@@ -207,7 +220,7 @@ header {background:#002d3c;text-align: left;color: #fff;display: none;}
 #Text_Secun_U {background: transparent; color: #000;}
 #Text_Secun_U::selection {background: transparent; color: #fff;}
 #Text_Princ_U::selection {background: transparent; color: #000;}
-#Text_Princ_U {display: flex; font-size: 2em;color: #D0D0D0;
+#Text_Princ_U {display: flex; ffont-size: 35px;color: #D0D0D0;
 				justify-content: center; margin: 0px;overflow: hidden;
 				white-space: normal;}
 				
@@ -217,7 +230,7 @@ header {background:#002d3c;text-align: left;color: #fff;display: none;}
 #Text_Secun_D {background: transparent; color: #905060;}
 #Text_Secun_D::selection {background: transparent; color: red;}
 #Text_Princ_D::selection {background: transparent; color: #000;}
-#Text_Princ_D {display: flex; font-size: 2em;color: #8080E0;
+#Text_Princ_D {display: flex; font-size: 35px;color: #8080E0;
 				justify-content: center; margin: 0px;overflow: hidden;
 				white-space: normal;}
 				
@@ -225,7 +238,7 @@ header {background:#002d3c;text-align: left;color: #fff;display: none;}
 #Text_Secun_T {background: transparent;color: #fff;}
 #Text_Secun_T::selection {background: transparent;color: #000;}
 #Text_Princ_T::selection {background: transparent; color: #000;}
-#Text_Princ_T {display: flex; font-size: 2em;color: #CCCCCC;
+#Text_Princ_T {display: flex; font-size: 35px;color: #CCCCCC;
 				justify-content: center; margin: 0px;overflow: hidden;
 				white-space: normal;}
 
